build schema using zod

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^8.9.2",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
