--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.11",
     "@react-email/components": "^0.0.31",
     "ai": "^4.0.22",
     "bcryptjs": "^2.4.3",
